[tool.poetry]
name = "python-fast-grpc"
version = "0.1.2"
description = "fast to code grpc in python"
authors = ["taogeYT <li_yatao@outlook.com>"]
readme = "README.md"
packages = [{include = "fast_grpc"}]

[tool.poetry.dependencies]
python = "^3.7"
protobuf = "^4.22.0"
grpcio = "^1.53.0"
grpcio-tools = "^1.53.0"
pydantic = "^1.10.0"
logzero = "^1.7.0"
blinker = "^1.6.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.0"
black = "^22.3.0"
flake8 = "^4.0"
mypy = "^0.931"
mypy-protobuf = "^3.4.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
ipython = "^6.5.0"
types-toml = "^0.10.8"
types-requests = "^2.28.11"
types-protobuf = "3.20.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.7"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
allow_redefinition = true
no_implicit_optional = true
local_partial_types = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true

[tool.black]
target-version = [ "py37" ]
line-length = 120
skip-numeric-underscore-normalization = true
exclude = 'dist|build|\.venv|\.git|\.mypy_cache'

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-svv -p no:warnings"
testpaths = ["tests"]
asyncio_mode = "auto"
