[tool.poetry]
name = "python-fast-grpc"
version = "0.2.5"
description = "Fast to Code gRPC in Python"
authors = ["taogeYT <li_yatao@outlook.com>"]
readme = "README.md"
packages = [{include = "fast_grpc"}]
repository = "https://github.com/taogeYT/fast-grpc"

[tool.poetry.dependencies]
python = ">=3.9"
protobuf = ">=4.21.1"
grpcio = ">=1.43.0"
grpcio-tools = ">=1.43.0"
pydantic = ">=2.0,<3.0.0"
logzero = ">=1.7.0,<2.0.0"
jinja2 = ">=2.11.2"

[tool.poetry.group.dev.dependencies]
ruff = "0.2.0"
mypy = "^1.10.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"
ipython = "8.0"
aiosqlite = "^0.20.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
allow_redefinition = true
no_implicit_optional = true
local_partial_types = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true

[tool.black]
target-version = [ "py37" ]
line-length = 120
skip-numeric-underscore-normalization = true
exclude = 'dist|build|\.venv|\.git|\.mypy_cache'

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-svv -p no:warnings"
testpaths = ["tests"]
asyncio_mode = "auto"
